<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="75dp"
        android:contentDescription="@string/logo"
        android:src="@drawable/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnConfig"
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/bottom_button_margin"
        android:backgroundTint="@color/light_yellow"
        android:text="@string/configuration"
        android:textSize="@dimen/button_text_size"
        app:icon="@drawable/ic_config"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnStart"
        android:layout_width="@dimen/button_width"
        android:layout_height="150dp"
        android:layout_marginBottom="@dimen/button_margin_other"
        android:backgroundTint="@color/green"
        android:text="@string/start_consultation_form"
        android:textSize="@dimen/button_text_size"
        app:icon="@drawable/ic_form"
        app:layout_constraintBottom_toTopOf="@+id/btnDocs"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <Button
        android:id="@+id/btnDocs"
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/button_margin_other"
        android:text="@string/documentation"
        android:textSize="@dimen/button_text_size"
        app:icon="@drawable/ic_about"
        app:layout_constraintBottom_toTopOf="@+id/btnConfig"
        app:layout_constraintEnd_toEndOf="@+id/btnConfig"
        app:layout_constraintStart_toStartOf="@+id/btnConfig" />

    <Button
        android:id="@+id/btnTransfer"
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/button_margin_other"
        android:backgroundTint="@color/light_blue"
        android:text="@string/transfer_files"
        android:textSize="@dimen/button_text_size"
        app:icon="@drawable/ic_files"
        app:layout_constraintBottom_toTopOf="@+id/btnDocs"
        app:layout_constraintEnd_toEndOf="@+id/btnDocs"
        app:layout_constraintStart_toStartOf="@+id/btnDocs" />

</androidx.constraintlayout.widget.ConstraintLayout>